# Simple-cmake-program-with-fftw

./: CMakeLists.txt  README.md
src/: FFTW.cpp  FFTW.cpp~  FFTW1.cpp  FFTW1.cpp~  FFTWr2r.cpp  helloworld.cpp
